--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,8 @@
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 .nav {
     background: #444;
@@ -9,7 +13,7 @@
 
 
  .header {
-     color: green;
+     color: red;
  }
 
  .container {
